--- a/Ranjan/index.html
+++ b/Ranjan/index.html
@@ -16,6 +16,7 @@
 </head>
 
 <body id="kendoUiMobileApp">
+    <script src="components/aboutView/index.js"></script>
     <script src="components/home/index.js"></script>
     <div data-role="layout" data-id="main">
         <header data-role="header">
@@ -26,6 +27,7 @@
         <footer data-role="footer">
             <div data-role="tabstrip" id="navigation-container">
                 <a href="components/home/view.html" data-icon="home">Home View</a>
+                <a href="components/aboutView/view.html" data-icon="globe">About</a>
             </div>
         </footer>
     </div>
