Changes from Views service

--- a/Ranjan/index.html
+++ b/Ranjan/index.html
@@ -15,6 +15,7 @@
     <script src="app.js"></script>
     <script src="bower_components/everlive/min/everlive.all.min.js"></script>
     <script src="dataProviders/ranjan.js"></script>
+    <script src="dataProviders/ranjan1.js"></script>
 </head>
 
 <body id="kendoUiMobileApp">
